wrapper/AppCoreCAPI.h

typedef struct C_Settings* ULSettings;
typedef struct C_App* ULApp;
typedef struct C_Window* ULWindow;
typedef struct C_Monitor* ULMonitor;
typedef struct C_Overlay* ULOverlay;
typedef enum {
  kWindowFlags_Borderless = 1 << 0,
  kWindowFlags_Titled = 1 << 1,
  kWindowFlags_Resizable = 1 << 2,
  kWindowFlags_Maximizable = 1 << 3,
} ULWindowFlags;
ACExport ULApp ulCreateApp(ULSettings settings, ULConfig config);
ACExport void ulDestroyApp(ULApp app);
ACExport void ulAppSetWindow(ULApp app, ULWindow window);
ACExport ULWindow ulAppGetWindow(ULApp app);
ACExport void ulAppRun(ULApp app);