src/lib.rs

extern "C" {
    pub fn ulConfigSetEnableImages(config: ULConfig, enabled: bool);
}
extern "C" {
    pub fn ulConfigSetEnableJavaScript(config: ULConfig, enabled: bool);
}
extern "C" {
    pub fn ulConfigSetUseBGRAForOffscreenRendering(config: ULConfig, enabled: bool);
}
extern "C" {
    pub fn ulConfigSetDeviceScaleHint(config: ULConfig, value: f64);
}
extern "C" {
    pub fn ulConfigSetFontFamilyStandard(config: ULConfig, font_name: ULString);
}
extern "C" {
    pub fn ulConfigSetFontFamilyFixed(config: ULConfig, font_name: ULString);
}
extern "C" {
    pub fn ulConfigSetFontFamilySerif(config: ULConfig, font_name: ULString);
}
extern "C" {
    pub fn ulConfigSetFontFamilySansSerif(config: ULConfig, font_name: ULString);
}
extern "C" {
    pub fn ulConfigSetUserAgent(config: ULConfig, agent_string: ULString);
}
extern "C" {
    pub fn ulConfigSetUserStylesheet(config: ULConfig, css_string: ULString);
}
extern "C" {
    pub fn ulCreateRenderer(config: ULConfig) -> ULRenderer;
}
extern "C" {
    pub fn ulDestroyRenderer(renderer: ULRenderer);
}
extern "C" {
    pub fn ulUpdate(renderer: ULRenderer);
}
extern "C" {
    pub fn ulRender(renderer: ULRenderer);
}
extern "C" {
    pub fn ulCreateView(
        renderer: ULRenderer,
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
        transparent: bool,
    ) -> ULView;
}
extern "C" {
    pub fn ulDestroyView(view: ULView);
}
extern "C" {
    pub fn ulViewGetURL(view: ULView) -> ULString;
}
extern "C" {
    pub fn ulViewGetTitle(view: ULView) -> ULString;
}
extern "C" {
    pub fn ulViewIsLoading(view: ULView) -> bool;
}
extern "C" {
    pub fn ulViewIsBitmapDirty(view: ULView) -> bool;
}
extern "C" {
    pub fn ulViewGetBitmap(view: ULView) -> ULBitmap;
}
extern "C" {
    pub fn ulViewLoadHTML(view: ULView, html_string: ULString);
}
extern "C" {
    pub fn ulViewLoadURL(view: ULView, url_string: ULString);
}
extern "C" {
    pub fn ulViewResize(
        view: ULView,
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn ulViewGetJSContext(view: ULView) -> JSContextRef;
}
extern "C" {
    pub fn ulViewEvaluateScript(view: ULView, js_string: ULString) -> JSValueRef;
}
extern "C" {
    pub fn ulViewCanGoBack(view: ULView) -> bool;
}
extern "C" {
    pub fn ulViewCanGoForward(view: ULView) -> bool;
}
extern "C" {
    pub fn ulViewGoBack(view: ULView);
}
extern "C" {
    pub fn ulViewGoForward(view: ULView);
}
extern "C" {
    pub fn ulViewGoToHistoryOffset(view: ULView, offset: ::std::os::raw::c_int);
}
extern "C" {
    pub fn ulViewReload(view: ULView);
}
extern "C" {
    pub fn ulViewStop(view: ULView);
}
extern "C" {
    pub fn ulViewFireKeyEvent(view: ULView, key_event: ULKeyEvent);
}
extern "C" {
    pub fn ulViewFireMouseEvent(view: ULView, mouse_event: ULMouseEvent);
}
extern "C" {
    pub fn ulViewFireScrollEvent(view: ULView, scroll_event: ULScrollEvent);
}
pub type ULChangeTitleCallback = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, caller: ULView, title: ULString),
>;
extern "C" {
    pub fn ulViewSetChangeTitleCallback(
        view: ULView,
        callback: ULChangeTitleCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
pub type ULChangeURLCallback = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, caller: ULView, url: ULString),
>;
extern "C" {
    pub fn ulViewSetChangeURLCallback(
        view: ULView,
        callback: ULChangeURLCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
pub type ULChangeTooltipCallback = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, caller: ULView, tooltip: ULString),
>;
extern "C" {
    pub fn ulViewSetChangeTooltipCallback(
        view: ULView,
        callback: ULChangeTooltipCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
pub type ULChangeCursorCallback = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, caller: ULView, cursor: ULCursor),
>;
extern "C" {
    pub fn ulViewSetChangeCursorCallback(
        view: ULView,
        callback: ULChangeCursorCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
pub type ULAddConsoleMessageCallback = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        caller: ULView,
        source: ULMessageSource,
        level: ULMessageLevel,
        message: ULString,
        line_number: ::std::os::raw::c_uint,
        column_number: ::std::os::raw::c_uint,
        source_id: ULString,
    ),
>;
extern "C" {
    pub fn ulViewSetAddConsoleMessageCallback(
        view: ULView,
        callback: ULAddConsoleMessageCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
pub type ULBeginLoadingCallback = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, caller: ULView),
>;
extern "C" {
    pub fn ulViewSetBeginLoadingCallback(
        view: ULView,
        callback: ULBeginLoadingCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
pub type ULFinishLoadingCallback = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, caller: ULView),
>;
extern "C" {
    pub fn ulViewSetFinishLoadingCallback(
        view: ULView,
        callback: ULFinishLoadingCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
pub type ULUpdateHistoryCallback = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, caller: ULView),
>;
extern "C" {
    pub fn ulViewSetUpdateHistoryCallback(
        view: ULView,
        callback: ULUpdateHistoryCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
pub type ULDOMReadyCallback = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, caller: ULView),
>;
extern "C" {
    pub fn ulViewSetDOMReadyCallback(
        view: ULView,
        callback: ULDOMReadyCallback,
        user_data: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn ulViewSetNeedsPaint(view: ULView, needs_paint: bool);
}
extern "C" {
    pub fn ulViewGetNeedsPaint(view: ULView) -> bool;
}
extern "C" {
    pub fn ulCreateString(str: *const ::std::os::raw::c_char) -> ULString;
}
extern "C" {
    pub fn ulCreateStringUTF8(str: *const ::std::os::raw::c_char, len: usize) -> ULString;
}
extern "C" {
    pub fn ulCreateStringUTF16(str: *mut ULChar16, len: usize) -> ULString;
}
extern "C" {
    pub fn ulDestroyString(str: ULString);
}
extern "C" {
    pub fn ulStringGetData(str: ULString) -> *mut ULChar16;
}
extern "C" {
    pub fn ulStringGetLength(str: ULString) -> usize;
}
extern "C" {
    pub fn ulStringIsEmpty(str: ULString) -> bool;
}
extern "C" {
    pub fn ulCreateEmptyBitmap() -> ULBitmap;
}
extern "C" {
    pub fn ulCreateBitmap(
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
        format: ULBitmapFormat,
    ) -> ULBitmap;
}
extern "C" {
    pub fn ulCreateBitmapFromPixels(
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
        format: ULBitmapFormat,
        row_bytes: ::std::os::raw::c_uint,
        pixels: *const ::std::os::raw::c_void,
        size: usize,
        should_copy: bool,
    ) -> ULBitmap;
}
extern "C" {
    pub fn ulCreateBitmapFromCopy(existing_bitmap: ULBitmap) -> ULBitmap;
}
extern "C" {
    pub fn ulDestroyBitmap(bitmap: ULBitmap);
}
extern "C" {
    pub fn ulBitmapGetWidth(bitmap: ULBitmap) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn ulBitmapGetHeight(bitmap: ULBitmap) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn ulBitmapGetFormat(bitmap: ULBitmap) -> ULBitmapFormat;
}
extern "C" {
    pub fn ulBitmapGetBpp(bitmap: ULBitmap) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn ulBitmapGetRowBytes(bitmap: ULBitmap) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn ulBitmapGetSize(bitmap: ULBitmap) -> usize;
}
extern "C" {
    pub fn ulBitmapOwnsPixels(bitmap: ULBitmap) -> bool;
}
extern "C" {
    pub fn ulBitmapLockPixels(bitmap: ULBitmap) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn ulBitmapUnlockPixels(bitmap: ULBitmap);
}
extern "C" {
    pub fn ulBitmapRawPixels(bitmap: ULBitmap) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn ulBitmapIsEmpty(bitmap: ULBitmap) -> bool;
}
extern "C" {
    pub fn ulBitmapErase(bitmap: ULBitmap);
}
extern "C" {
    pub fn ulBitmapWritePNG(bitmap: ULBitmap, path: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn ulCreateKeyEvent(
        type_: ULKeyEventType,
        modifiers: ::std::os::raw::c_uint,
        virtual_key_code: ::std::os::raw::c_int,
        native_key_code: ::std::os::raw::c_int,
        text: ULString,
        unmodified_text: ULString,
        is_keypad: bool,
        is_auto_repeat: bool,
        is_system_key: bool,
    ) -> ULKeyEvent;
}
extern "C" {
    pub fn ulDestroyKeyEvent(evt: ULKeyEvent);
}
extern "C" {
    pub fn ulCreateMouseEvent(
        type_: ULMouseEventType,
        x: ::std::os::raw::c_int,
        y: ::std::os::raw::c_int,
        button: ULMouseButton,
    ) -> ULMouseEvent;
}
extern "C" {
    pub fn ulDestroyMouseEvent(evt: ULMouseEvent);
}
extern "C" {
    pub fn ulCreateScrollEvent(
        type_: ULScrollEventType,
        delta_x: ::std::os::raw::c_int,
        delta_y: ::std::os::raw::c_int,
    ) -> ULScrollEvent;
}
extern "C" {
    pub fn ulDestroyScrollEvent(evt: ULScrollEvent);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct C_App {
    _unused: [u8; 0],
}
pub type ULApp = *mut C_App;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct C_Window {
    _unused: [u8; 0],
}
pub type ULWindow = *mut C_Window;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct C_Monitor {
    _unused: [u8; 0],
}
pub type ULMonitor = *mut C_Monitor;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct C_Overlay {
    _unused: [u8; 0],
}
pub type ULOverlay = *mut C_Overlay;
pub const ULWindowFlags_kWindowFlags_Borderless: ULWindowFlags = 1;
pub const ULWindowFlags_kWindowFlags_Titled: ULWindowFlags = 2;
pub const ULWindowFlags_kWindowFlags_Resizable: ULWindowFlags = 4;
pub const ULWindowFlags_kWindowFlags_Maximizable: ULWindowFlags = 8;
#[doc = ""]
#[doc = " Window creation flags. @see Window::Create"]
#[doc = ""]
pub type ULWindowFlags = u32;
extern "C" {
    #[doc = ""]
    #[doc = " Create the App singleton."]
    #[doc = ""]
    #[doc = " @param  config  Configuration settings to use."]
    #[doc = ""]
    #[doc = " @note  You should only create one of these per application lifetime."]
    #[doc = ""]
    #[doc = "        App maintains its own Renderer instance, make sure to set your"]
    #[doc = "        Config before creating App. (@see Platform::set_config)"]
    #[doc = ""]
    pub fn ulCreateApp(config: ULConfig) -> ULApp;
}
extern "C" {
    #[doc = ""]
    #[doc = " Destroy the App instance."]
    #[doc = ""]
    pub fn ulDestroyApp(app: ULApp);
}
extern "C" {
    #[doc = ""]
    #[doc = " Set the main window. You must set this before calling ulAppRun."]
    #[doc = ""]
    #[doc = " @param  window  The window to use for all rendering."]
    #[doc = ""]
    #[doc = " @note  We currently only support one Window per App, this will change"]
    #[doc = "        later once we add support for multiple driver instances."]
    #[doc = ""]
    pub fn ulAppSetWindow(app: ULApp, window: ULWindow);
}
extern "C" {
    #[doc = ""]
    #[doc = " Get the main window."]
    #[doc = ""]
    pub fn ulAppGetWindow(app: ULApp) -> ULWindow;
}
